Fixed spacing issue in sidebar

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -109,14 +109,8 @@ button:hover {
   cursor: pointer;
 }
 
-.subscribe-button {
-  height: 26px;
-  width: 100px;
-  padding-left: 50px;
-  padding: 0;
-  margin-left: 0;
-  margin-bottom: 0;
-  border-radius: 0 0 0 0;
+.sidebar button {
+  margin-bottom: 100px;
 }
 
 @media (min-width: 700px) {
